--- a/kevi/pom.xml
+++ b/kevi/pom.xml
@@ -40,16 +40,32 @@
 
     <build>
         <finalName>kevi</finalName>
-
+		<!-- directory缺省情况下指向target --> 
+		<!--<directory>${basedir}/target</directory>-->
         <plugins>
+        	<plugin>
+			<groupId>org.apache.tomcat.maven</groupId>
+			<artifactId>tomcat7-maven-plugin</artifactId>
+			<version>2.2</version>
+			<configuration>
+			    <url>http://testyun.cn:8080/manager/text</url>
+			    <!-- server、username、password对应maven的setting下的配置 -->
+			    <server>tomcat</server>
+			    <username>admin</username>
+			    <password>pass@caco</password>
+			    <path>/${project.build.finalName}</path>
+			    <!-- war文件路径缺省情况下指向target -->
+			    <!--<warFile>${basedir}/target/${project.build.finalName}.war</warFile>-->
+			</configuration>
+		    </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.3</version>
                 <configuration>
                     <encoding>utf-8</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
@@ -57,7 +73,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <warSourceExcludes>*/classes/spring-oauth-server.properties</warSourceExcludes>
+<!--                     <warSourceExcludes>*/classes/spring-oauth-server.properties</warSourceExcludes> -->
                     <archive>
                         <manifestEntries>
                             <Implementation-BuildNumber>
@@ -71,6 +87,7 @@
                             </Implementation-Version>
                         </manifestEntries>
                     </archive>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
 
@@ -440,6 +457,12 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
     </dependencies>
 
 
