--- a/caco/pom.xml
+++ b/caco/pom.xml
@@ -7,21 +7,10 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>caco Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-		<groupId>org.apache.tomcat</groupId>
-		<artifactId>tomcat-servlet-api</artifactId>
-		<version>8.0.30</version>
-		<scope>provided</scope><!--不打进war包 -->
-	</dependency>
-	    
-  </dependencies>
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.version>3.1.1.RELEASE</spring.version>
+  </properties>
   <build>
     <finalName>caco</finalName>
     <plugins>
@@ -34,7 +23,7 @@
                   <source>1.8</source>
                   <target>1.8</target>
               </configuration>
-          </plugin>
+          </plugin>
           <!-- 代码自动发布，兼容tomcat8 -->
           <plugin>
 			<groupId>org.apache.tomcat.maven</groupId>
@@ -53,4 +42,52 @@
 		</plugin>
     </plugins>
   </build>
+  
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+		<groupId>org.apache.tomcat</groupId>
+		<artifactId>tomcat-servlet-api</artifactId>
+		<version>8.0.30</version>
+		<scope>provided</scope><!--不打进war包 -->
+	</dependency>
+	 <dependency>
+           <groupId>net.sf.json-lib</groupId>
+           <artifactId>json-lib</artifactId>
+           <version>2.4</version>
+           <classifier>jdk15</classifier>
+           <exclusions>
+               <exclusion>
+                   <groupId>commons-logging</groupId>
+                   <artifactId>commons-logging</artifactId>
+               </exclusion>
+           </exclusions>
+       </dependency>  
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency> 
+         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency>
+  </dependencies>
 </project>
