--- a/caco/pom.xml
+++ b/caco/pom.xml
@@ -104,6 +104,10 @@
 			<artifactId>xstream</artifactId>
 			<version>1.4.8</version>
 		</dependency>
-								
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>						
   </dependencies>
 </project>
