--- a/caco/pom.xml
+++ b/caco/pom.xml
@@ -10,6 +10,8 @@
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>3.1.1.RELEASE</spring.version>
+        <spring.data.redis>1.2.1.RELEASE</spring.data.redis>
+    	<jedis>2.4.2</jedis>
   </properties>
   <build>
     <finalName>caco</finalName>
@@ -108,6 +110,27 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20090211</version>
-		</dependency>						
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>${spring.data.redis}</version>
+		</dependency>
+		<dependency>
+	        <groupId>org.springframework</groupId>  
+	        <artifactId>spring-core</artifactId>  
+	        <version>${spring.version}</version>  
+	    </dependency>
+	    <dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>${jedis}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+					    						
   </dependencies>
 </project>
