--- a/caco/pom.xml
+++ b/caco/pom.xml
@@ -131,5 +131,10 @@
 			<artifactId>commons-pool2</artifactId>
 			<version>2.4.2</version>
 		</dependency>
+		<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.1.2</version>
+        </dependency>
   </dependencies>
 </project>
