--- a/caco/pom.xml
+++ b/caco/pom.xml
@@ -136,5 +136,10 @@
             <artifactId>jstl</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.12</version>
+		</dependency>
   </dependencies>
 </project>
