--- a/CSH/src/main/webapp/WEB-INF/classes/dbconfig.properties
+++ b/CSH/src/main/webapp/WEB-INF/classes/dbconfig.properties
@@ -1,7 +1,7 @@
-url:jdbc:mysql://localhost:3306/fhadmin?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
+url:jdbc:mysql://testyun.cn:3306/fhadmin?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
 driverClassName:com.mysql.jdbc.Driver
 username:root
-password:root
+password:ms@caco
        
 filters:stat
    
